style: fix salutation alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -86,7 +86,7 @@ header {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
     display: grid;
-    grid-template-columns: 100px 1fr;
+    grid-template-columns: 120px 1fr;
     grid-template-rows: 1fr 2fr;
     align-items: center;
 }
@@ -101,13 +101,16 @@ header {
 .hi-wrapper > .salutation {
     font-size: 0.8rem;
     font-weight: 700;
-    padding-left: 25px;
+    padding-left: 15px;
+    align-self: end;
+
 }
 
 .hi-wrapper > .user-name {
     font-size: 1.3rem;
     font-weight: 700;
-    padding-left: 25px;
+    padding-left: 15px;
+    align-self: start;
 }
 
 .button-wrapper {
